actually fix the vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
 
 .icon{
   height: 22px;
-  vertical-align: text-top
+  vertical-align: text-top;
 }
 
 h1 {
